Add class btn-red, btn-grey to solve contrast errors on provider list page
#7057 - Create manage providers UI that interfaces with Patient Consent Management API

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -314,3 +314,14 @@ padding-top: 10px;
 .label-top-margin{
   margin-top: 5px;
 }
+
+/*provider-list-page*/
+.btn-red{
+  background-color:#ac1d2c;
+  color:#ffffff;
+}
+
+.btn-grey{
+  background-color:#cccccc;
+  color:#000000;
+}
