Add style for provider lookup form validation error messages
#7058: Create the search provider UI that will interface with PLS API

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -325,3 +325,8 @@ padding-top: 10px;
   background-color:#cccccc;
   color:#000000;
 }
+
+.text-alert{
+  color: #ac1d2c;
+  font-style: italic;
+}
