Add text and styling to Provider Search interface
#7058: Create the search provider UI that will interface with PLS API

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -82,6 +82,18 @@ color:#262727;
 
 /*end mixins*/
 
+/*Text-Font Classes */
+
+.bold {
+  font-weight: bold;
+}
+.italic {
+  font-style: italic;
+}
+.center {
+  text-align: center;
+}
+
 /*PALETTE*/
 
 .bg-white-page {
@@ -92,6 +104,14 @@ color:#262727;
     border-color: #4D565E;
   color: #000;
 }*/
+
+.info-blue {
+  color: #31708f;
+}
+
+.light-grey {
+  color: #d3d3d3;
+}
 
 .panel-darkblue {
   border-color: #50687F;
