Add class bg-color-blue,  to solve contrast errors on provider lookup search page
#7058 - Create the search provider UI that will interface with PLS API

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -106,7 +106,7 @@ color:#262727;
 }*/
 
 .info-blue {
-  color: #31708f;
+  color: #005d98;
 }
 
 .light-grey {
@@ -350,3 +350,11 @@ padding-top: 10px;
   color: #ac1d2c;
   font-style: italic;
 }
+/* end of provider-list-page*/
+
+/*provider-lookup search page*/
+.bg-color-blue{
+  background-color:#005b94 ;
+  color: #ffffff;
+}
+/* end of provider-lookup search page*/
