Add styling to fix 508 contrast issue on Provider Search interface
#7058: Create the search provider UI that will interface with PLS API

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -44,6 +44,11 @@
 .dark-green {
     background-color: #256357;
     border-color: #256357;
+  &[disabled]{
+    color: #333;
+    background-color: rgba(221,221,221,1);
+    border-color: #ddd;
+  }
 }
 
 
@@ -157,7 +162,7 @@ color:#262727;
 //}
 
 .margin-left-0 {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .height-60 {
@@ -210,8 +215,8 @@ color:#262727;
 }
 
 .left-right-padding-0 {
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
 }
 // Will be revisit for stickyheader
 //.fixed-header {
