HTML and Style edits to the List Consent components.
#7186: Implement final html template for list consent page

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -1,5 +1,12 @@
 /* consent */
-
+.border-bottom-red {
+  border-bottom: darkred 2px solid;
+  padding-bottom: 5px;
+}
+.border-bottom-blue {
+  border-bottom: royalblue 2px solid;
+  padding-bottom: 5px;
+}
 
 
 /*modifications*/
