Added additional consent icon to style sheet
#7175:Implement list consent UI

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -132,6 +132,18 @@
   }
 }
 
+.statusIcon_revoked {
+  &:before {
+    font-family: FontAwesome;
+    content: '\f00d';
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    margin: 10px;
+  }
+}
+
+
 /*modifications*/
 .ibox-title.modified {
   border-style: none;
