Fix bug 7321 by temporarily commenting chevron global style
#7321: Create Consent :: Accordion (Chevrons) Not Appearing

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -110,12 +110,16 @@
   border-bottom: royalblue 2px solid;
   padding-bottom: 5px;
 }
+
+/* Bug #7321:Create Consent :: Accordion (Chevrons) Not Appearing
+This implementation must be improved to prevent similar issues.
 .ibox .fa.fa-chevron-up {
   color: white;
 }
 .ibox .fa.fa-chevron-down {
   color: white;
 }
+*/
 
 .chevron_absolute {
   position: absolute;
