Continue to Edit Health Information html page. Add class to Main.less file.
#7587 Create UI Interface used to display Patient Health Information

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -121,6 +121,8 @@ This implementation must be improved to prevent similar issues.
 }
 */
 
+.white .ibox-tools .fa.fa-chevron-up, .white .ibox-tools .fa.fa-chevron-down  {color: white;}
+
 .chevron_absolute {
   position: absolute;
   right: 30px;
@@ -297,6 +299,10 @@ color:#262727;
     border-color: #4D565E;
   color: #000;
 }*/
+
+.white {
+  color: white;
+}
 
 .info-blue {
   color: @pp-navy-blue;
