Separate the directives in the common module into directives in core and layout module. Seperate the directives in their own seperate files. Update the template with all the new directives prefix.
#7178 - Implement create consent UI

--- a/client/app/layout/topnavbar.html
+++ b/client/app/layout/topnavbar.html
@@ -4,7 +4,7 @@
         <div class="row ">
             <div class="col-sm-12">
                 <div class="navbar-header">
-                    <span minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
+                    <span pp-minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
                 </div>
                 <div class="pull-right">
                     <div class="navbar-brand top-padding10">
