--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar-default navbar-static-side fix-sidebar" role="navigation" >
     <div class="sidebar-collapse">
-        <ul side-navigation class="nav" id="side-menu">
+        <ul pp-side-navigation class="nav" id="side-menu">
             <li class="nav-header">
 
                 <div class="dropdown profile-element" dropdown>
