Fix bug related to the css class pp-ibox-tools.
#7652 - View my health information :: Accordion panels :: Chevron Icons Not Presented

--- a/client/app/layout/directives/iBoxTools.html
+++ b/client/app/layout/directives/iBoxTools.html
@@ -1,4 +1,4 @@
-<div class="pp-ibox-tools dropdown" dropdown >
+<div class="ibox-tools dropdown" dropdown >
    <span class="badge green-white badge-primary badge-icon" ng-bind="total"></span>
     <a ng-click="toggleCollapsed()"> <i class="fa" ng-class="{'fa-chevron-up': !ppCollapsed, 'fa-chevron-down': ppCollapsed}"></i></a>
 </div>
