Put the isolated scope variables in the bindToController object in the ppiBoxTool directive.
#7698 - As a developer, I want to update Angular to version 1.4, so that the application can benefit from new features

--- a/client/app/layout/directives/iBoxTools.html
+++ b/client/app/layout/directives/iBoxTools.html
@@ -1,4 +1,4 @@
 <div class="ibox-tools dropdown" dropdown >
-   <span class="badge green-white badge-primary badge-icon" ng-bind="total"></span>
-    <a ng-click="toggleCollapsed()"> <i class="fa" ng-class="{'fa-chevron-up': !ppCollapsed, 'fa-chevron-down': ppCollapsed}"></i></a>
+   <span class="badge green-white badge-primary badge-icon" ng-bind="iboxToolVm.total"></span>
+    <a ng-click="iboxToolVm.toggleCollapsed()"> <i class="fa" ng-class="{'fa-chevron-up': !iboxToolVm.ppCollapsed, 'fa-chevron-down': iboxToolVm.ppCollapsed}"></i></a>
 </div>
