--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -570,11 +570,14 @@ padding-top: 10px;
 
 /* State Modifiers */
 
-select-provider > .panel:hover {
-  .highlight-component-border();
-  & > .panel-heading {
-    .highlight-component-foreground();
-  }
+
+/*
+  This is a test class to style the content in the section
+  Will be remove by the end of the sprint.
+*/
+.testContent> table, th, td {
+  border: 1px solid black;
+  padding: 1px  2px;
 }
 
 /* End of State Modifiers */
