--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="pull-right">
                     <div class="navbar-brand top-padding10">
-                        <img src="assets/img/hie_grey.png" alt="hie logo grey" height="40px">
+                        <img style="border: thin solid red;" src="assets/img/hie_grey.png" alt="hie logo grey" height="40px">
                     </div>
                 </div>
                 <ul class="nav navbar-top-links modified navbar-right">
