--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -1,3 +1,17 @@
+.healthInfo {
+  table > thead > tr > th,
+  table > tbody > tr > th,
+  table > tfoot > tr > th,
+  table > thead > tr > td,
+  table > tbody > tr > td,
+  table > tfoot > tr > td {
+    border-top: 1px solid #e7eaec;
+    line-height: 1.42857;
+    padding: 8px;
+    vertical-align: top;
+  }
+}
+
 /* Bootstrap Breakpoint Sizes */
 @bs-xs-max: 767px;
 @bs-sm-min: 768px;
