Add additional table styling for JSON content
#7692 As a patient, I can view my health information, based on the latest transformed JSON from IExHub

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -1,4 +1,9 @@
 .healthInfo {
+  table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 10px;
+  }
   table > thead > tr > th,
   table > tbody > tr > th,
   table > tfoot > tr > th,
