Edit html and styles for consentCard.html page
#7925 UI styling enhancements for consent list and health information display

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -152,10 +152,10 @@ This implementation must be improved to prevent similar issues.
   &:before {
     font-family: FontAwesome;
     content: '\f044';
-    font-size: 37px;
-    color: white;
+    font-size: 20px;
+    color: black;
     position: absolute;
-    margin: 10px;
+    margin: -3px 0 0 -25px;
   }
 }
 
@@ -163,10 +163,10 @@ This implementation must be improved to prevent similar issues.
   &:before {
     font-family: FontAwesome;
     content: '\f05d';
-    font-size: 40px;
-    color: white;
+    font-size: 20px;
+    color: red;
     position: absolute;
-    margin: 10px;
+    margin: -3px 0 0 -25px;
   }
 }
 
@@ -177,7 +177,7 @@ This implementation must be improved to prevent similar issues.
     font-size: 40px;
     color: white;
     position: absolute;
-    margin: 10px;
+    margin: -3px 0 0 -25px;
   }
 }
 
@@ -457,6 +457,10 @@ color:#262727;
 
 .side-padding10 {
     .side-padding(10px);
+}
+
+.left-padding40 {
+  padding-left:(40px);
 }
 
 .left-padding55 {
