--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -14,7 +14,7 @@
                 <ul class="nav navbar-top-links modified navbar-right">
                     <li>
                     <span class="m-r-sm welcome-message">
-                        Welcome <span ng-bind="AppVm.authentication.userName">.</span>
+                        Welcome
                     </span>
                     </li>
                     <li>
@@ -27,9 +27,6 @@
                                 template="{{AppVm.oauth.template}}"
                                 state="{{AppVm.oauth.state}}">
                         </oauth>
-                        <!--<a class="dark-grey" href="" ng-click="AppVm.logOut();">
-                            <i class="fa fa-sign-out"></i> Log out
-                        </a>-->
                     </li>
                 </ul>
             </div>
