Dynamically load user profile image using the oauth:profile event.
#8014 - As a patient, I can view my profile information which is generated dynamically

--- a/client/app/layout/directives/profileMenu.html
+++ b/client/app/layout/directives/profileMenu.html
@@ -1,5 +1,5 @@
 <div class="dropdown profile-element" dropdown>
-    <img alt="Patient profile photo" class="img-circle" ng-src="{{profileMenuVm.profileImgPath}}"/>
+    <img alt="Patient profile photo" class="img-circle" ng-src="assets/img/{{profileMenuVm.profileImgName}}"  ng-cloak/>
     <a class="dropdown-toggle" dropdown-toggle href="">
         <span class="clear">
             <span class="block m-t-xs">
