Edit profileMain.html file. Center Align avatar and username.
#8014 -As a patient, I can view my profile information which is generated dynamically

--- a/client/app/layout/directives/profileMenu.html
+++ b/client/app/layout/directives/profileMenu.html
@@ -1,4 +1,4 @@
-<div class="dropdown profile-element" dropdown>
+<div class="dropdown profile-element center">
     <img alt="Patient profile photo" class="img-circle" ng-src="assets/img/{{profileMenuVm.profileImgName}}"  ng-cloak/>
     <a class="dropdown-toggle" dropdown-toggle href="">
         <span class="clear">
