Remove oauth-ng and temporarily disable related functions
#8196 - As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -18,15 +18,15 @@
                     </span>
                     </li>
                     <li>
-                        <oauth
-                        site="{{AppVm.oauth.site}}"
-                        client-id="{{AppVm.oauth.clientId}}"
-                        redirect-uri="{{AppVm.oauth.redirectUri}}"
-                        profile-uri="{{AppVm.oauth.profileUri}}"
-                        scope="{{AppVm.oauth.scope}}"
-                        template="{{AppVm.oauth.template}}"
-                        state="{{AppVm.oauth.state}}">
-                        </oauth>
+                        <!--<oauth-->
+                        <!--site="{{AppVm.oauth.site}}"-->
+                        <!--client-id="{{AppVm.oauth.clientId}}"-->
+                        <!--redirect-uri="{{AppVm.oauth.redirectUri}}"-->
+                        <!--profile-uri="{{AppVm.oauth.profileUri}}"-->
+                        <!--scope="{{AppVm.oauth.scope}}"-->
+                        <!--template="{{AppVm.oauth.template}}"-->
+                        <!--state="{{AppVm.oauth.state}}">-->
+                        <!--</oauth>-->
                     </li>
                 </ul>
             </div>
