Implement logout function by removing token
 #8196 - As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -27,6 +27,7 @@
                         <!--template="{{AppVm.oauth.template}}"-->
                         <!--state="{{AppVm.oauth.state}}">-->
                         <!--</oauth>-->
+                        <pp-oauth-logout></pp-oauth-logout>
                     </li>
                 </ul>
             </div>
