Clean up unnecessary code in security modular and oauth-ng related code
 #8196 - As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -17,18 +17,7 @@
                         Welcome
                     </span>
                     </li>
-                    <li>
-                        <!--<oauth-->
-                        <!--site="{{AppVm.oauth.site}}"-->
-                        <!--client-id="{{AppVm.oauth.clientId}}"-->
-                        <!--redirect-uri="{{AppVm.oauth.redirectUri}}"-->
-                        <!--profile-uri="{{AppVm.oauth.profileUri}}"-->
-                        <!--scope="{{AppVm.oauth.scope}}"-->
-                        <!--template="{{AppVm.oauth.template}}"-->
-                        <!--state="{{AppVm.oauth.state}}">-->
-                        <!--</oauth>-->
-                        <pp-oauth-logout></pp-oauth-logout>
-                    </li>
+                    <li><pp-oauth-logout></pp-oauth-logout></li>
                 </ul>
             </div>
         </div>
