Edit html and styles for Login page
#8196 As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/layout/topNavbar.html
+++ b/client/app/layout/topNavbar.html
@@ -7,18 +7,16 @@
                     <span pp-minimaliza-sidebar togglesidebar="AppVm.toggleSideBar()"></span>
                 </div>
                 <div class="pull-right">
-                    <div class="navbar-brand top-padding10">
+                    <div class="inline m-r">
+                        <pp-oauth-logout></pp-oauth-logout>
+                    </div>
+
+                    <div class="m-t-sm m-b-sm m-r inline">
                         <img src="assets/img/mhc_grey.png" alt="mhc logo grey" height="40px">
                     </div>
+
                 </div>
-                <ul class="nav navbar-top-links modified navbar-right">
-                    <li>
-                    <span class="m-r-sm welcome-message">
-                        Welcome
-                    </span>
-                    </li>
-                    <li><pp-oauth-logout></pp-oauth-logout></li>
-                </ul>
+
             </div>
         </div>
     </div>
