--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -222,7 +222,7 @@ This implementation must be improved to prevent similar issues.
 }
 
 .custom-login-column.modified {
-  height: 550px;
+  height: auto;
 }
 
 
