Change the max width for popover box
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -795,7 +795,9 @@ body.ng-scope.pace-done.grey{
 }
 /* end of provider-lookup search page */
 
-
+.popover-width-medium {
+  max-width: 330px;
+}
 
 /* State Modifiers */
 
