Style and html edits for Federal and State Categories on Sensitive Information Categories Display
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -429,6 +429,10 @@ body.ng-scope.pace-done.grey{
 }
 
 /*Text-Font Classes */
+
+.fw-600 {
+  font-weight: 600;
+}
 .bold {
   font-weight: bold;
 }
