--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -445,6 +445,9 @@ body.ng-scope.pace-done.grey{
 .nowrap {
   white-space: nowrap;
 }
+.pre-wrap {
+  white-space: pre-wrap;
+}
 .font-extraBold {
   font-weight: 700;
 }
