--- a/client/app/layout/navigation.html
+++ b/client/app/layout/navigation.html
@@ -21,6 +21,10 @@
                 <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-folder-open"></i> <span class="nav-label">Medical Documents</span></a>
             </li>
 
+            <li ng-class="{active: $state.includes('fe.activity')}" >
+                <a ui-sref="fe.activity.list"><i class="fa fa-clock-o"></i> <span class="nav-label">Activity History</span></a>
+            </li>
+
              <li ng-class="{active: $state.includes('fe.patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()"  >
                 <a ui-sref="fe.patient.healthinformation"><i class="fa fa-user-md"></i> <span class="nav-label">Health Information</span></a>
             </li>
