Edits to Login page. Change logo from MHC to C2S.
#9398-As a developer, I will have replaced all references of MHC appearing in the UI, with Consent 2 Share

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -600,6 +600,12 @@ body.ng-scope.pace-done.grey{
   padding: 10px 0 0 30px;
 }
 
+.c2sLoginLogo {
+  @media (max-width: @bs-xs-max) {
+    width: 50%;
+  }
+}
+
 .info-link {
   padding: 10px 30px 0 0;
 }
